@@ -1,4 +1,4 @@
-// Copyright 2009, 2010, 2012, 2016 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2009, 2010, 2012, 2016, 2017 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.dao;
 
 import java.sql.*;
@@ -17,7 +17,7 @@ import org.deltava.util.cache.*;
 /**
  * A Data Access Object to load routes. 
  * @author Luke
- * @version 7.1
+ * @version 7.3
  * @since 2.6
  */
 
@@ -74,7 +74,7 @@ public class GetNavRoute extends GetOceanicRoute {
 			return new LinkedList<NavigationDataBean>();
 
 		// Check the cache
-		Route obj = _rCache.get(new Integer(route.hashCode()));
+		Route obj = _rCache.get(Integer.valueOf(route.hashCode()));
 		if (obj instanceof CacheableRoute) {
 			CacheableRoute cr = (CacheableRoute) obj;
 			return cr.getWaypoints();
